@@ -1,3 +1,6 @@
+2018-06-02  Yury Aliaev  <mutab0r@rambler.ru>
+	* app/sample-editor.c: Code optimization and cleanup.
+
 2018-05-31  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/sample-editor.c: Stereo conversion dialogs are made more 
 	compact; file opening/closing issues are cleaned up and fixed.
